[project]
name = "relaydon"
version = "0.1.0"
description = "RelayDon is the Mastodon RSS relay"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "environs>=14.1.1",
    "feedparser>=6.0.11",
    "mastodon-py>=2.0.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
